--- a/scss/base/_header.scss
+++ b/scss/base/_header.scss
@@ -6,19 +6,24 @@ header {
 	left: 0;
 	top: 0;
 	width: 100%;
-	font-size: 2rem;
+	font-size: 16px;
 	padding: 0 30px;
 	text-transform: uppercase;
 	z-index: 1000;
 
 	@media (max-width: 639px) {
-		padding: 0 8px;
+		font-size: 14px;
+		padding: 0 6px;
 	}
 
 	ul {
 		list-style: none;
 		display: flex;
 		justify-content: flex-end;
+
+		@media (max-width: 639px) {
+			justify-content: center;
+		}
 	}
 
 	li {
@@ -37,7 +42,7 @@ header {
 		padding: 0 20px;
 
 		@media (max-width: 639px) {
-			padding: 0 8px;
+			padding: 0 6px;
 		}
 	}
 
