--- a/scss/docs/_header.scss
+++ b/scss/docs/_header.scss
@@ -1,6 +1,5 @@
 header {
 	font-family: $body-font;
-	font-size: 16px;
 	background: $color-dark;
 	height: 44px;
 	border-bottom: 4px solid $color-accent;
